// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItemSwitch /> ListItem renders correctly with both topLine and bottomLine 1`] = `
<View
  ref={null}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      {
        "borderTopColor": "#F0F0F0",
        "borderTopWidth": 1.6,
      },
      {
        "borderBottomColor": "#F0F0F0",
        "borderBottomWidth": 1.6,
      },
    ]
  }
>
  <RCTText
    style={
      {
        "paddingVertical": 18,
      }
    }
    testID="Secondary"
  >
    Germany
  </RCTText>
  <Switch
    onChange={[Function]}
    value={true}
  />
</View>
`;

exports[`<ListItemSwitch /> ListItem renders correctly with bottomLine 1`] = `
<View
  ref={null}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      {
        "borderBottomColor": "#F0F0F0",
        "borderBottomWidth": 1.6,
      },
    ]
  }
>
  <RCTText
    style={
      {
        "paddingVertical": 18,
      }
    }
    testID="Secondary"
  >
    Germany
  </RCTText>
  <Switch
    onChange={[Function]}
    value={true}
  />
</View>
`;

exports[`<ListItemSwitch /> ListItem renders correctly with topLine 1`] = `
<View
  ref={null}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      {
        "borderTopColor": "#F0F0F0",
        "borderTopWidth": 1.6,
      },
    ]
  }
>
  <RCTText
    style={
      {
        "paddingVertical": 18,
      }
    }
    testID="Secondary"
  >
    Germany
  </RCTText>
  <Switch
    onChange={[Function]}
    value={true}
  />
</View>
`;

exports[`<ListItemSwitch /> render 1`] = `
<View
  ref={null}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
    ]
  }
>
  <RCTText
    style={
      {
        "paddingVertical": 18,
      }
    }
    testID="Secondary"
  >
    Germany
  </RCTText>
  <Switch
    onChange={[Function]}
    value={true}
  />
</View>
`;
